[gd_scene load_steps=8 format=2]

[ext_resource path="res://Actors/OstrichEnemy.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("Spear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Knight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, -8 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Spear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 4.76837e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Knight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -8 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.0217, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.07575, 16.0365 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.9776, 3.79507 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 8 )

[node name="OstrichKight" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 2
script = ExtResource( 1 )
speed = Vector2( 200, 600 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/left = SubResource( 1 )
anims/right = SubResource( 2 )

[node name="Horse" type="Area2D" parent="."]
collision_layer = 64

[node name="Horse" type="ColorRect" parent="Horse"]
margin_left = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.0196078, 0.0784314, 0.984314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Horse"]
position = Vector2( 8, 16 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Knight" type="Area2D" parent="."]
position = Vector2( -16, -8 )
collision_layer = 4
collision_mask = 8

[node name="Knight" type="ColorRect" parent="Knight"]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = 16.0
color = Color( 0.929412, 0.980392, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knight"]
self_modulate = Color( 0.52549, 0.137255, 0.537255, 1 )
shape = SubResource( 4 )

[node name="Spear" type="Area2D" parent="."]
position = Vector2( 16, 4.76837e-07 )
collision_layer = 16
collision_mask = 32

[node name="SpearSprite" type="ColorRect" parent="Spear"]
margin_left = -24.0
margin_top = -3.77008
margin_right = 24.0
margin_bottom = 4.22992
color = Color( 0.937255, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spear"]
position = Vector2( 0, 4.76837e-07 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.8
one_shot = true

[node name="PhysicCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 6 )

[connection signal="area_entered" from="Horse" to="." method="_on_Horse_area_entered"]
[connection signal="area_entered" from="Knight" to="." method="_on_Knight_area_entered"]
